--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test:
-  mockito:
   faker:
+  mockito: ^5.4.4
+  build_runner: ^2.4.11
+  mocktail: ^1.0.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
