--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   
+  
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test:
-  faker:
+  
   mockito: ^5.4.4
   build_runner: ^2.4.11
   mocktail: ^1.0.4
+  test: ^1.25.2
+  faker: ^2.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
